processed/jira/txt/LU/LU-19152.txt
Key:        LU-19152
Summary:    lnet: struct lnet_ioctl_config_ni too large to declare on stack
Link:       https://jira.whamcloud.com/browse/LU-19152
Type:       Bug
Priority:   Medium
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Wed, 2 Jul 2025 05:10:05 +0000
Updated:    Wed, 20 Aug 2025 11:27:28 +0000
Resolved:   Wed, 20 Aug 2025 11:27:28 +0000

--- Description ---
struct lnet_ioctl_config_ni conf exceeds 1024 limit check

  CC [M]  /home/shaun/lustre-release/lnet/lnet/api-ni.o
/home/shaun/lustre-release/lnet/lnet/api-ni.c: In function ‘lnet_net_cmd’:
/home/shaun/lustre-release/lnet/lnet/api-ni.c:6513:1: error: the frame size of 1040 bytes is larger than 1024 bytes [-Werror=frame-larger-than=]
 6513 | }
      | ^

--- Comment (pjones, Wed, 20 Aug 2025 11:27:28 +0000) ---
Merged for 2.17

--- Comment (gerrit, Wed, 20 Aug 2025 03:05:13 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/60008/

Subject: LU-19152 lnet: struct lnet_ioctl_config_ni too large for stack

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 8e9abba6383ec98843328fd66bb54913bb4dff6c

--- Comment (gerrit, Wed, 2 Jul 2025 05:59:47 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/60008

Subject: LU-19152 lnet: struct lnet_ioctl_config_ni too large for stack

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 3ebde92762d8b7fc44da38020ea40ce4378ff686
